--- a/devops.html
+++ b/devops.html
@@ -46,7 +46,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=ol59afwt&__jvst=Employee+Referral&__jvsd=snfTCgwS&__jvsc=Twitter&bid=nx5YqMwh'>Palo Alto Networks Careers - Senior Software Engineer (DevOps)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=ol59afwt&__jvst=Employee+Referral&__jvsd=snfTCgwS&__jvsc=Twitter&bid=nx5YqMwh'>Palo Alto Networks Careers - Senior Software Engineer (DevOps)</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -118,7 +118,7 @@
 <p><span class="badge badge-light">Tel Aviv, Israel</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/showpad/jobs/98344'>Job Application for DevOps Engineer at Showpad</a></h5> 
+<h5><a href='https://boards.greenhouse.io/showpad/jobs/98344'>Job Application for DevOps Engineer at Showpad</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -138,7 +138,7 @@
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/maven-wave-partners/job/ojembfwO'>Maven Wave Partners Careers - Tech Analyst / Tech Lead - DevOps</a></h5> 
+<h5><a href='https://jobs.jobvite.com/maven-wave-partners/job/ojembfwO'>Maven Wave Partners Careers - Tech Analyst / Tech Lead - DevOps</a></h5> 
 <p><span class="badge badge-light">Gurgaon, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -146,15 +146,15 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://demos.join.com/jobs/467712-devops-engineer-m-w-d'>Job @ DEMOS E-Partizipation (Berlin): DevOps Engin... | JOIN</a></h5> 
+<h5><a href='https://demos.join.com/jobs/467712-devops-engineer-m-w-d'>Job @ DEMOS E-Partizipation (Berlin): DevOps Engin... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/consensys/jobs/1942255'>Job Application for DevOps Engineer (Solutions US) at Consensys</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/consensys/jobs/1942255'>Job Application for DevOps Engineer (Solutions US) at Consensys</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://yiluhub.join.com/jobs/473968-senior-devops-engineer'>Job @ Yilu Travel Services (Berlin): Senior DevOps... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://yiluhub.join.com/jobs/473968-senior-devops-engineer'>Job @ Yilu Travel Services (Berlin): Senior DevOps... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -162,7 +162,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://solactive.join.com/jobs/461584-administrator-devops-sysops-m-f-d-or-dresden'>Job @ Solactive  (Dresden): Administrator (DevOps/... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://solactive.join.com/jobs/461584-administrator-devops-sysops-m-f-d-or-dresden'>Job @ Solactive  (Dresden): Administrator (DevOps/... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -196,11 +196,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://amswh.avature.net/careers/JobDetail/Devops-Engineer/17390'>Devops Engineer - External Careers</a></h5> 
+<h5><a href='https://amswh.avature.net/careers/JobDetail/Devops-Engineer/17390'>Devops Engineer - External Careers</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TurnitinLLC/743999698553903-graduate-devops-engineer'>Turnitin, LLC Graduate DevOps Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TurnitinLLC/743999698553903-graduate-devops-engineer'>Turnitin, LLC Graduate DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -278,7 +278,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/labelbox/ccb94ac3-e1eb-4574-afad-9e635b164ed8'>Labelbox - DevOps Engineer On-Prem</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/labelbox/ccb94ac3-e1eb-4574-afad-9e635b164ed8'>Labelbox - DevOps Engineer On-Prem</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -290,7 +290,7 @@
 <p><span class="badge badge-light">Vienna Vienna</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999698547390-senior-staff-software-engineer-devops'>Visa Senior Staff Software Engineer, DevOps | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698547390-senior-staff-software-engineer-devops'>Visa Senior Staff Software Engineer, DevOps | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -442,13 +442,13 @@ internal IT operations. You will be completing tasks in support of our IT functi
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://tempo.recruiterbox.com/jobs/fk06zck'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://tempo.recruiterbox.com/jobs/fk06zck'>
     Lead DevOps Engineer at Tempo
 </a></h5> 
 <p><span class="badge badge-light">Reykjav?k, Iceland Montreal</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ghr.wd1.myworkdayjobs.com/Lateral-US/job/Addison/DevOps-Engineer---Continuous-Integration-Continuous-Delivery_19069159'>DevOps Engineer</a></h5> 
+<h5><a href='https://ghr.wd1.myworkdayjobs.com/Lateral-US/job/Addison/DevOps-Engineer---Continuous-Integration-Continuous-Delivery_19069159'>DevOps Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 15, 2019 ... The Continuous Integration/Continuous Delivery DevOps Engineer will join an 
 agile service team focused on daily production service delivery and application?...</p>
@@ -457,7 +457,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://impraise.recruitee.com/o/devops-engineer-medior'>
+<h5><a href='https://impraise.recruitee.com/o/devops-engineer-medior'>
       DevOps Engineer Medior - Impraise
     </a></h5> 
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
