--- a/software.html
+++ b/software.html
@@ -39,8 +39,20 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.lever.co/opendoor/d6b45059-c78b-4785-90bc-83610de45b76'>Opendoor - Home Intelligence Software Engineer</a></h5> 
+<h5><a href='http://konradgroup.applytojob.com/apply/meLQ0OKMxS/Senior-Software-Developer'>Senior Software Developer - Konrad Group - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/GuardantHealth/743999698692021-senior-software-engineer-redwood-city-ca'>Guardant Health Senior Software Engineer, Redwood City, CA | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/GuardantHealth/743999698692053-senior-software-engineer-integrations-redwood-city-ca'>Guardant Health Senior Software Engineer, Integrations - Redwood City, CA | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/opendoor/d6b45059-c78b-4785-90bc-83610de45b76'>Opendoor - Home Intelligence Software Engineer</a></h5> 
+<p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/frontapp/42172a6c-b223-4b0a-a4a9-575a554d789e'>Front - Software Engineering Intern (Summer 2020)</a></h5> 
@@ -83,7 +95,7 @@
 <p><span class="badge badge-light">Durham, NC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dominodatalab/jobs/1939775'>Job Application for Senior Front End Software Engineer at Domino Data Lab</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dominodatalab/jobs/1939775'>Job Application for Senior Front End Software Engineer at Domino Data Lab</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -119,7 +131,7 @@
 <p><span class="badge badge-light">Philadelphia, PA United States</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698682763-software-engineer-jr1009292-'>Broadridge Software Engineer (JR1009292) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698682763-software-engineer-jr1009292-'>Broadridge Software Engineer (JR1009292) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -131,7 +143,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PayScale/743999698685989-lead-senior-software-engineer-data-engineering'>PayScale Lead, Senior Software Engineer, Data Engineering | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PayScale/743999698685989-lead-senior-software-engineer-data-engineering'>PayScale Lead, Senior Software Engineer, Data Engineering | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -143,7 +155,7 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ozNUafwa&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nLLVqMw8'>ServiceNow Careers - Senior Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ozNUafwa&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nLLVqMw8'>ServiceNow Careers - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -191,7 +203,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LaunchCode/743999698671279-entry-level-software-developer'>LaunchCode Entry Level Software Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/LaunchCode/743999698671279-entry-level-software-developer'>LaunchCode Entry Level Software Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -219,7 +231,7 @@
 <p><span class="badge badge-light">Denver, Colorado</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/util/jobs/4434918002'>Job Application for Senior Software Engineer at Util</a></h5> 
+<h5><a href='https://boards.greenhouse.io/util/jobs/4434918002'>Job Application for Senior Software Engineer at Util</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -247,7 +259,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/couchbase/d52bdff6-b6d6-4891-8303-a4ef88dae666'>Couchbase - Principal Software Engineer - Query Optimizer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/couchbase/d52bdff6-b6d6-4891-8303-a4ef88dae666'>Couchbase - Principal Software Engineer - Query Optimizer</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -259,7 +271,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://www.zupajobs.co.uk/job/senior-software-developers-c-50k-60k-eastleigh-hampshire/'>Senior Software Developers C# ?50K - ?60K - Eastleigh, Hampshire - zupaJobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.zupajobs.co.uk/job/senior-software-developers-c-50k-60k-eastleigh-hampshire/'>Senior Software Developers C# ?50K - ?60K - Eastleigh, Hampshire - zupaJobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -271,7 +283,7 @@
 <p><span class="badge badge-light">Santa Clara, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://hearst.referrals.selectminds.com/jobs/manager-software-engineering-7418'>Manager, Software Engineering - Hearst Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hearst.referrals.selectminds.com/jobs/manager-software-engineering-7418'>Manager, Software Engineering - Hearst Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -301,7 +313,7 @@
 <p><span class="badge badge-light">Burlington, MA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://l10n.org/job/robotics-localization-software-engineer/'>Robotics Localization Software Engineer ? Localization Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://l10n.org/job/robotics-localization-software-engineer/'>Robotics Localization Software Engineer ? Localization Jobs</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -329,7 +341,7 @@
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/cision-canada/job/o2lg9fww'>Cision Canada Careers - Senior Software Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/cision-canada/job/o2lg9fww'>Cision Canada Careers - Senior Software Developer</a></h5> 
 <p><span class="badge badge-light">Canada Canada Ottawa, Ontario</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -428,18 +440,6 @@
 <h5><a href='https://jobs.lever.co/recurly/e1d754e8-8479-44b1-bb4c-97b4e348f940'>Recurly - Senior Software Engineer, Growth</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/dataiku/9fadf0b6-b87b-4fd0-bd72-d642679dc90b'>Dataiku - Software Engineer Intern - Interactive Data Preparation</a></h5> 
-<p><span class="badge badge-light">Paris, France</span></p>
-<p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/dataiku/a4e06a5b-0bcf-4613-9daf-2fb40a8c7eab'>Dataiku - Software Engineer Intern - Fuzzy Join</a></h5> 
-<p><span class="badge badge-light">Paris, France</span></p>
-<p>Posted on: 2019-11-01</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.unity.com/position/senior-software-developer/1941304'>Unity Careers - Senior Software Developer @ Dundee</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-11-01</p>
 <hr/>
 
 
